Resolved some warnings (not necessary, but less warning messages).
lowerNum is checked for <45 values.  "Lower weight cannot be less than that of the barbell."